reorganized project files more sensically